# mcp-nocodeapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  session.py
app/models/: __init__.py
app/schemas/: __init__.py  health.py
app/services/: __init__.py  health.py
app/tests/: __init__.py  test_health.py
app/utils/: __init__.py
